Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12263,7 +12263,7 @@ Quiet minute together.</pre>
 <div bag="default" created="20200806091703518" modified="20200808062952010" revision="0" tags="Keywords" title="vedanā" type="text/vnd.tiddlywiki">
 <pre>See [[pleasant]], [[unpleasant]], [[neither-nor]]</pre>
 </div>
-<div created="20200809055134512" modified="20200810194949294" title="Welcome">
+<div created="20200809055134512" modified="20200810195051556" title="Welcome">
 <pre>You can see all the transcribed talks either listed as 
 
 * [[Talks ordered by the date they were given|Talks by Date]] or
@@ -12273,7 +12273,7 @@ Quiet minute together.</pre>
 
 When viewing a talk you can choose to show the keywords as underlined &quot;links&quot; by checking or unchecking the 
 ''``Show Cross Site Keywords as Links``''
-checkbox on the right sidebar (on desktop on mobile it's above this text).
+checkbox on the right sidebar (on desktop. On mobile it's above this text).
 
 Clicking on a ''keyword'' in the text will take you to that keyword's note. The footer of that note contains a list of all the other mentions of this keyword in the talks. Hover over one of those links to see a transclusion of the text in situ.
 
